--- a/docker/gateway/conf.d/default.conf
+++ b/docker/gateway/conf.d/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name multichat.openschema.io openschema-multichat.elpai.org;
+    server_name multichat.openschema.io openschema-multichat.elpai.org openschema-local-multichat.elpai.org;
 
     location / {
         proxy_pass http://host-multichat-ui:2000;
@@ -16,7 +16,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name api.openschema.io openschema-api.elpai.org;
+    server_name api.openschema.io openschema-api.elpai.org openschema-local-api.elpai.org;
 
     # API routes
     location /api/v1/mcp {
@@ -45,7 +45,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name ui.openschema.io openschema-ui.elpai.org;
+    server_name ui.openschema.io openschema-ui.elpai.org openschema-local-ui.elpai.org;
 
     location /ui/v1/auth {
         proxy_pass http://remote-auth-ui:2000;
