--- a/src/web/apps/remotes/chat/tsconfig.json
+++ b/src/web/apps/remotes/chat/tsconfig.json
@@ -8,7 +8,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@common/*": ["../../../common/*"]
+      // TODO "@common/*": ["../../../common/*"]
+      "@common/*": ["@common/*"]
     }
   }
 }
