--- a/src/web/apps/remotes/chat/package.json
+++ b/src/web/apps/remotes/chat/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@common/api": "workspace:*",
     "@common/config": "workspace:*",
+    "@common/asset": "workspace:*",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
