update : jwt valid

--- a/src/service/auth/requirements.txt
+++ b/src/service/auth/requirements.txt
@@ -1,6 +1,10 @@
 fastapi[standard]
 python-jose
 
+# JWT validation with RS256 (elpai-auth integration)
+PyJWT[crypto]==2.8.0
+cryptography==41.0.7
+
 aiokafka
 
 sqlmodel
