separate service and web ans gateway of docker-compose.yml

--- a/docker-compose-web.yml
+++ b/docker-compose-web.yml
@@ -1,13 +1,13 @@
 services:
-  reverse-proxy:
-    build:
-      context: docker/gateway
-    ports:
-      - 80:80
-    #depends_on:
-    #  - mcp
-    #  - chat
-    #  - auth
+  #reverse-proxy:
+  #  build:
+  #    context: docker/gateway
+  #  ports:
+  #    - 80:80
+  #  #depends_on:
+  #  #  - mcp
+  #  #  - chat
+  #  #  - auth
 
   remote-auth-ui:
     build:
