--- a/docker-compose-web.yml
+++ b/docker-compose-web.yml
@@ -16,12 +16,14 @@ services:
       args:
         - SERVICE_DIR=remotes/auth
         - VITE_API_GATEWAY_URL=${VITE_API_GATEWAY_URL}
+        - VITE_AUTH_GATEWAY_URL=${VITE_AUTH_GATEWAY_URL}
         - VITE_UI_GATEWAY_URL=${VITE_UI_GATEWAY_URL}
         - VITE_AUTH_URL=${VITE_AUTH_URL}
     env_file:
       - .env.dev
     environment:
       - VITE_API_GATEWAY_URL=${VITE_API_GATEWAY_URL}
+      - VITE_AUTH_GATEWAY_URL=${VITE_AUTH_GATEWAY_URL}
       - VITE_UI_GATEWAY_URL=${VITE_UI_GATEWAY_URL}
       - VITE_AUTH_URL=${VITE_AUTH_URL}
     
