--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -1,10 +1,12 @@
 FROM node:22-alpine AS build
 
 ARG VITE_API_GATEWAY_URL
+ARG VITE_AUTH_GATEWAY_URL
 ARG VITE_UI_GATEWAY_URL
 ARG VITE_AUTH_URL
 
 ENV VITE_API_GATEWAY_URL=${VITE_API_GATEWAY_URL}
+ENV VITE_AUTH_GATEWAY_URL=${VITE_AUTH_GATEWAY_URL}
 ENV VITE_UI_GATEWAY_URL=${VITE_UI_GATEWAY_URL}
 ENV VITE_AUTH_URL=${VITE_AUTH_URL}
 
