--- a/src/web/apps/remotes/auth/package.json
+++ b/src/web/apps/remotes/auth/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@common/api": "workspace:*",
+    "@common/config": "workspace:*",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-separator": "^1.1.7",
