--- a/docker-compose-infra.yml
+++ b/docker-compose-infra.yml
@@ -34,7 +34,8 @@ services:
       timeout: 3s
       retries: 30
     volumes:
-      - /var/lib/postgresql/data
+      #- /var/lib/postgresql/data
+      - $HOME/docker/volumes/postgres:/var/lib/postgresql/data
     ports:
       - 5432:5432
 
