--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,25 @@ VITE_TEMP_ACCESS_TOKEN=TODO
 
 OPENROUTER_BASE_URL=https://chat.elpai.org/v1
 OPENROUTER_API_KEY=TODO
+
+ELPAI_AUTH_URL=http://host.docker.internal:8080
+# for alpha
+# ELPAI_AUTH_URL=https://auth-alpha.elpai.org
+
+######################################################
+######################################################
+######################################################
+# Frontend Environment Variables
+
+VITE_TEMP_ACCESS_TOKEN=TODO
+
+# VITE_API_GATEWAY_URL=http://api.openschema.io
+# VITE_UI_GATEWAY_URL=http://ui.openschema.io
+VITE_API_GATEWAY_URL=http://openschema-local-api.elpai.org
+VITE_UI_GATEWAY_URL=http://openschema-local-ui.elpai.org
+
+VITE_ELPAI_AUTH_URL=http://openschema-local-ui.elpai.org:8080
+VITE_ELPAI_GATEWAY_URL=http://openschema-local-api.elpai.org:7070
+# for alpha
+#VITE_ELPAI_AUTH_URL=https://auth-alpha.elpai.org # elpai-auth (로그인, 8080)
+#VITE_ELPAI_GATEWAY_URL=https://api-alpha.elpai.org  # elpai-gateway (7070) 
